# name: test_get_mythic_keystone_affix
  <class 'dict'> {
    '_links': <class 'dict'> {
      'self': <class 'dict'> {
        'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/1?namespace=static-8.3.0_32861-us',
      },
    },
    'description': "Healing in excess of a target's maximum health is instead converted to a heal absorption effect.",
    'id': 1,
    'media': <class 'dict'> {
      'id': 1,
      'key': <class 'dict'> {
        'href': 'https://us.api.blizzard.com/data/wow/media/keystone-affix/1?namespace=static-8.3.0_32861-us',
      },
    },
    'name': 'Overflowing',
  }
---
# name: test_get_mythic_keystone_affix_media
  <class 'dict'> {
    '_links': <class 'dict'> {
      'self': <class 'dict'> {
        'href': 'https://us.api.blizzard.com/data/wow/media/keystone-affix/1?namespace=static-8.3.0_32861-us',
      },
    },
    'assets': <class 'list'> [
      <class 'dict'> {
        'key': 'icon',
        'value': 'https://render-us.worldofwarcraft.com/icons/56/inv_misc_volatilewater.jpg',
      },
    ],
    'id': 1,
  }
---
# name: test_get_mythic_keystone_affixes_index
  <class 'dict'> {
    '_links': <class 'dict'> {
      'self': <class 'dict'> {
        'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/?namespace=static-8.3.0_32861-us',
      },
    },
    'affixes': <class 'list'> [
      <class 'dict'> {
        'id': 1,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/1?namespace=static-8.3.0_32861-us',
        },
        'name': 'Overflowing',
      },
      <class 'dict'> {
        'id': 2,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/2?namespace=static-8.3.0_32861-us',
        },
        'name': 'Skittish',
      },
      <class 'dict'> {
        'id': 3,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/3?namespace=static-8.3.0_32861-us',
        },
        'name': 'Volcanic',
      },
      <class 'dict'> {
        'id': 4,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/4?namespace=static-8.3.0_32861-us',
        },
        'name': 'Necrotic',
      },
      <class 'dict'> {
        'id': 5,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/5?namespace=static-8.3.0_32861-us',
        },
        'name': 'Teeming',
      },
      <class 'dict'> {
        'id': 6,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/6?namespace=static-8.3.0_32861-us',
        },
        'name': 'Raging',
      },
      <class 'dict'> {
        'id': 7,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/7?namespace=static-8.3.0_32861-us',
        },
        'name': 'Bolstering',
      },
      <class 'dict'> {
        'id': 8,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/8?namespace=static-8.3.0_32861-us',
        },
        'name': 'Sanguine',
      },
      <class 'dict'> {
        'id': 9,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/9?namespace=static-8.3.0_32861-us',
        },
        'name': 'Tyrannical',
      },
      <class 'dict'> {
        'id': 10,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/10?namespace=static-8.3.0_32861-us',
        },
        'name': 'Fortified',
      },
      <class 'dict'> {
        'id': 11,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/11?namespace=static-8.3.0_32861-us',
        },
        'name': 'Bursting',
      },
      <class 'dict'> {
        'id': 12,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/12?namespace=static-8.3.0_32861-us',
        },
        'name': 'Grievous',
      },
      <class 'dict'> {
        'id': 13,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/13?namespace=static-8.3.0_32861-us',
        },
        'name': 'Explosive',
      },
      <class 'dict'> {
        'id': 14,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/14?namespace=static-8.3.0_32861-us',
        },
        'name': 'Quaking',
      },
      <class 'dict'> {
        'id': 15,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/15?namespace=static-8.3.0_32861-us',
        },
        'name': 'Relentless',
      },
      <class 'dict'> {
        'id': 16,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/16?namespace=static-8.3.0_32861-us',
        },
        'name': 'Infested',
      },
      <class 'dict'> {
        'id': 117,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/117?namespace=static-8.3.0_32861-us',
        },
        'name': 'Reaping',
      },
      <class 'dict'> {
        'id': 119,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/119?namespace=static-8.3.0_32861-us',
        },
        'name': 'Beguiling',
      },
      <class 'dict'> {
        'id': 120,
        'key': <class 'dict'> {
          'href': 'https://us.api.blizzard.com/data/wow/keystone-affix/120?namespace=static-8.3.0_32861-us',
        },
        'name': 'Awakened',
      },
    ],
  }
---
